src/test/resources/public/input/typechecking/fail/access/fail05.jova
class Test{
public int x;

  public int t(int x, bool b, Test t) {
    return 0;
  }

}

class Main2 {
   private Test test;
   private Test x;

   private int testing(int x) {
        return x.t(0, true, this.x);
   }
}